# eovim

./: .gitignore  meson.build  version.h.in
.github/workflows/: ci.yml
data/: meson.build
data/desktop/: meson.build
data/images/: meson.build
data/man/: meson.build
data/themes/: meson.build
data/themes/img/: meson.build
data/themes/snd/: meson.build
data/vim/: meson.build
src/: main.c  meson.build
src/event/: meson.build
src/gui/: meson.build
