theme_src += [
  'img/button_normal.png',
  'img/caps_lock_warning.png',
  'img/cr_glow.png',
  'img/cr_key.png',
  'img/cr_out.png',
  'img/inset_shadow.png',
  'img/tab_base_bottom.png',
  'img/tab_base_l0.png',
  'img/tab_base_l1.png',
  'img/tab_base_m.png',
  'img/tab_base_r0.png',
  'img/tab_base_r1.png',
  'img/tab_close.png',
  'img/tab_other_l.png',
  'img/tab_other_m.png',
  'img/tab_other_r.png',
  'img/tab_shad_l0.png',
  'img/tab_shad_l1.png',
  'img/tab_shad_l2.png',
  'img/tab_shad_r0.png',
  'img/tab_shad_r1.png',
  'img/tab_shad_r2.png',
  'img/tooltip-base.png',
  'img/vertical_separated_bar_glow.png',
]
